hardening/prepend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: astro-app
