hardening/workload.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: astro-app
  template:
    metadata:
      labels:
        app: astro-app
    spec:
      containers:
      - name: astro-container
        image: astro-image

apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: astro-app
  template:
    metadata:
      labels:
        app: astro-app
    spec:
      containers:
      - name: astro-container
        image: astro-image

  volumes:
  - name: astro-vol
    persistentVolumeClaim:
      claimName: astro-claim
