hardening/workload_deployment.yaml

apiVersion: v1
kind: Deployment
metadata:
  name: my-workload
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: nginx:latest
