hardening/gateway-config.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limiting-gateway
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rate-limited-service
          servicePort: 80
