hardening/istio-config.yaml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rate-limiting-gateway
spec:
  hosts:
  - example.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: rate-limited-service
        port:
          number: 80
