hardening/rate-limiting-config.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: rate-limiting-gateway
spec:
  host: gateway
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      http:
        maxRequestsPerConnection: 10
